# ripstop

./: .gitignore  Cargo.toml  Makefile.toml  README.md  pyproject.toml  pyvenv.cfg
.github/workflows/: github-actions-build.yml
Scripts/: activate  activate.bat
book/: book.toml
book/src/: SUMMARY.md  chapter_1.md  chapter_2.md  simulation.md
cli/: Cargo.toml
cli/src/: main.rs
examples/: adder.py  adder.rp  aws_hello_world.rp  bcd.rp  blinky.rp  mismatched_types.rp  sha2.py  sha2.rp  spi.rp  sw_btn_led.rp  sw_btn_led.v  uart.py  uart.rp
maturin-docker/: Dockerfile  install-maturin.sh
pyripstop/: Cargo.toml
pyripstop/src/: lib.rs
ripstop/: Cargo.toml
src/: ast.rs  compile.rs  error.rs  grammar.pest  ir.rs  lib.rs  main.rs  parse.rs  simulation.rs  tree.rs  verilog_ast.rs
templates/: simulation_harness.v
tests/: bcd.expected.v  bcd.rp  bcd.test  bcd.test.csv  bcd.test.v  bits.test  bits_subset.test  blinky.expected.v  blinky.rp  blinky.test  blinky.test.v  comb_add.compiled.v  comb_add.rp  comb_add.test  comb_add.test.v  comb_and.test  comb_assign.expected.v  comb_assign.rp  comb_assign.test  comb_assign.test.v  comb_ops.test  comb_sub.test  conditional.test  conditional_multi_assign_error.test  conditional_multi_time.test  conditional_multi_time_diff_vars.test  conditional_selector_causality.test  counter_subset.test  cyclecount.test  cyclical_assignment.output  cyclical_assignment.rp  delay.compiled.v  delay.rp  delay.test  delay.test.csv  delay.test.v  delay_mixed_op.expected.v  delay_mixed_op.rp  delay_mixed_op.test  delay_mixed_op.test.csv  (+37 more)
(+14 files in other folders)
