[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: Remove unused dependencies
ripstop = { path = "../ripstop" }
pest = "2.0"
pest_derive = "2.0"
lazy_static = "1.4.0"
clap = { version = "3.2.16", features = [ "derive" ] }
subprocess = "0.2.9"
tera = "1.17.0"
serde = { version = "1.0.114", features = [ "derive" ] }
