[package]
name = "pyripstop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ripstop_lib"
crate-type = [ "cdylib" ]

[dependencies]
ripstop = { path = "../ripstop" }
pyo3 = { version = "0.17.0", features = [ "extension-module" ] }
